Fixed it on iOS---buttons, not links---and CSS tweaks

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,20 +12,26 @@
  *= require_tree .
  */
 
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:700|Roboto);
 
-body {
+html, body {
   background-color: #BDC2CE;
-  font-family: arial;
+  font-family: 'Roboto', sans-serif;
   color: #212632;
+  margin: 0;
 }
 
 .container {
   width: 500px;
+  top: 0;
   margin: auto;
+  background-color:#E6ECFA;
+  padding: 40px;
 }
 
 h1, h2, h3, h4, h5, h6 {
   text-align: center;
+  font-family: 'Roboto Slab', serif;
 }
 
 a {
